fixed 'alert' spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -648,14 +648,17 @@ a {
   #navbar2 {
     display: flex; } }
 
+.navbar-light .navbar-toggler {
+  border-color: #dc3545; }
+
 .alert {
   background: #f2f2f2;
   color: #1a1a1a;
   border: #1a1a1a;
   box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.25);
   border-radius: 0px;
-  position: absolute;
   margin-top: 60px;
+  margin-bottom: 0px;
   z-index: 999;
   width: 100%; }
 
@@ -664,9 +667,6 @@ a {
   background-image: url(../images/callToAction.jpg);
   padding: 50px 15px 25px 15px !important;
   width: 100%; }
-
-.carousel {
-  margin-top: 60px; }
 
 .carousel-item.active,
 .carousel-item-next,
