--- a/scss/_carousel.scss
+++ b/scss/_carousel.scss
@@ -1,6 +1,6 @@
 // custom carousel
 .carousel {
-  margin-top: $navbar-custom-height;
+  // margin-top: $navbar-custom-height;
 }
 
 .carousel-item.active,
