--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -120,3 +120,7 @@
     // }
   }
 }
+
+.navbar-light .navbar-toggler {
+  border-color: $light-red;
+}
